src/objects/Employee__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>mail id of the employee</inlineHelpText>
    <label>Employee Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>