src/objects/Employee__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <inlineHelpText>Enter the name of the employee</inlineHelpText>
    <label>Employee Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>