src/objects/Employee__c/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Onboarding Date</label>
    <type>DateTime</type>
</CustomField>