src/objects/Employee__c/fields/Stream_Selected__c.field-meta.xml
<CustomField>
    <fullName>Stream_Selected__c</fullName>
    <label>Stream Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Frontend Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Devops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>